--- a/puppet-modules/drushfetcher/templates/drushrc.php.erb
+++ b/puppet-modules/drushfetcher/templates/drushrc.php.erb
@@ -1,4 +1,4 @@
 <?php
 
-$options['fetcher']['info-fetcher.class'] = 'FetcherServices\InfoFetcher\FetcherServices';
-$options['fetcher']['info-fetcher.config'] = array('host' => '<%= fetcher_host %>');
+$options['fetcher']['info_fetcher.class'] = 'FetcherServices\InfoFetcher\FetcherServices';
+$options['fetcher']['info_fetcher.config'] = array('host' => '<%= fetcher_host %>');
