--- a/puppet-modules/automysqlbackup/templates/automysqlbackup.conf.erb
+++ b/puppet-modules/automysqlbackup/templates/automysqlbackup.conf.erb
@@ -15,10 +15,10 @@
 # Basic Settings
 
 # Username to access the MySQL server e.g. dbuser
-CONFIG_mysql_dump_username='root'
+CONFIG_mysql_dump_username='<%= mysqluser %>'
 
 # Password to access the MySQL server e.g. password
-CONFIG_mysql_dump_password=''
+CONFIG_mysql_dump_password='<%= mysqlpassword %>'
 
 # Host name (or IP address) of MySQL server e.g localhost
 #CONFIG_mysql_dump_host='localhost'
@@ -28,7 +28,7 @@ CONFIG_mysql_dump_password=''
 #CONFIG_mysql_dump_host_friendly=''
 
 # Backup directory location e.g /backups
-CONFIG_backup_dir="<%= backup_dir %>"
+CONFIG_backup_dir="<%= mysqlbackupdir %>"
 
 # This is practically a moot point, since there is a fallback to the compression
 # functions without multicore support in the case that the multicore versions aren't
